--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <script src="https://trello.com/power-ups/power-up.js"></script>
+    <script src="https://trello.com/power-ups/power-up.min.js"></script>
     <script src="./client.js"></script>
   </body>
 </html>
